src/styles/Banner.css
.banner {
  display: flex;
  height: 111px;
  margin-bottom: 22px;
  mix-blend-mode: darken;
  /* opacity: 0.3; */
  border-radius: 10px;
}

.banner.landscape-home-page {
  background: #000000 url(../assets/landscape-home-page.jpg);
}

.banner.landscape-about-page {
  background: #000000 url(../assets/landscape-about-page.jpg);
}

.tagline {
  margin: auto;
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 500;
  font-size: 24px;
  line-height: 24px;
  color: #ffffff;
}

@media (min-width: 576px) {
  .banner {}
  .tagline {}
}

@media (min-width: 768px) {
  .banner {}
  .tagline {}
}

@media (min-width: 992px) {
  .banner {}
  .tagline {}
}

@media (min-width: 1200px) {
  .banner {
    height: 223px;
    margin-bottom: 43px;
    border-radius: 25px;
  }
  .tagline {
    font-size: 48px;
    line-height: 68px;
  }
}

@media (min-width: 1400px) {
  .banner {}
  .tagline {}
}

